--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -38,6 +38,12 @@
                 android:text="AndroidX DataBinding Button"
                 android:textAllCaps="false" />
 
+            <TextView
+                android:id="@+id/textView"
+                android:textColor="#000"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
         </LinearLayout>
     </ScrollView>
 </layout>
